@@ -75,159 +75,26 @@
 .\" This license will be governed by the laws of the Commonwealth of Virginia,
 .\" without reference to its choice of law rules.
 .if \n(Pb .ig Ig
-.TH pbs_alterjob 3B " " Local PBS
+.TH pbs_get_server_list 3B "" Local PBS
 .so ../ers/ers.macros
 .Ig
 .SH NAME
-pbs_alterjob \- alter pbs batch job
+pbs_get_server_list \- get a list of pbs server names
 .SH SYNOPSIS
 #include <pbs_error.h>
 .br
 #include <pbs_ifl.h>
 .sp
-.nf
 .ft 3
-int pbs_alterjob(\^int connect, char\ *job_id, struct\ attrl\ *attrib,
-char\ *extend\^)
-.sp
-int pbs_alterjob_async(\^int connect, char\ *job_id, struct\ attrl\ *attrib,
-char\ *extend\^)
-.fi
-.ft 1
-.SH DESCRIPTION
-Issue a batch request to alter a batch job.
-.LP
-A
-.I "Modify Job"
-batch request is generated and sent to the server over the connection
-specified by
-.Ar connect 
-which is the return value of \fBpbs_connect\fP(). When the asynchronous
-\fBpbs_alterjob_async\fP() call is used, the server will validate the request
-and reply before modifying the job.  This version of the call can be used to
-reduce latency in scheduling, especially when the scheduler must modify a large
-number of jobs.
-.LP 
-The argument,
-.Ar job_id ,
-identifies which job is to be altered, it is specified in the form:
-.br
-.Ty
-\ \ \ \ sequence_number.server
-.ft 1
-.LP
-The parameter,
-.Ar attrib ,
-is a pointer to an
-.I attrl
-structure which is defined in pbs_ifl.h as:
-.sp
-.Ty
 .nf
-    struct attrl {
-        char *name;
-        char *resource;
-        char *value
-        struct attrl *next;
-    };
-.fi
-.sp
+char pbs_get_server_list()
 .ft 1
-The 
-.Ar attrib
-list is terminated by the first entry where
-.Ty next
-is a null pointer.
-.LP
-The
-.Ty name
-member points to a string which is the name of the attribute.  The
-.Ty value
-member points to a string which is the value of the attribute.
-The attribute names are defined in pbs_ifl.h:
-.br
-.RS
-.IP #define\ ATTR_a\ "Execution_Time"
-Alter the job's execution time.
-.IP #define\ ATTR_A\ "Account_Name"
-Alter the account string.
-.IP #define\ ATTR_c\ "Checkpoint"
-Alter the checkpoint interval.
-.IP #define\ ATTR_e\ "Error_Path"
-Alter the path name for the standard error of the job.
-.IP #define\ ATTR_g\ "Group_List"
-Alter the list of group names under which the job may execute.
-.IP #define\ ATTR_h\ "Hold_Types"
-Alter the hold types.
-.IP #define\ ATTR_j\ "Join_Path"
-Alter if standard error and standard output are joined (merged).
-.IP #define\ ATTR_k\ "Keep_Files"
-Alter which output of the job is kept on the execution host.
-.IP #define\ ATTR_l\ "Resource_List"
-Alter the value of a named resource.
-.IP #define\ ATTR_m\ "Mail_Points"
-Alter the points at which the server will send mail about the job.
-.IP #define\ ATTR_M\ "Mail_Users"
-Alter the list of users who would receive mail about the job.
-.IP #define\ ATTR_N\ "Job_Name"
-Alter the job name.
-.IP #define\ ATTR_o\ "Output_Path"
-Alter the path name for the standard output of the job.
-.IP #define\ ATTR_p\ "Priority"
-Alter the priority of the job.
-.IP #define\ ATTR_r\ "Rerunable"
-Alter the rerunable flag.
-.IP #define\ ATTR_S\ "Shell_Path_List"
-Alter the path to the shell which will interprets the job script.
-.IP #define\ ATTR_u\ "User_List"
-Alter the list of user names under which the job may execute.
-.IP #define\ ATTR_v\ "Variable_List"
-Alter the list of environmental variables which are to be exported to the job.
-.IP #define\ ATTR_depend\ "depend"
-Alter the inter-job dependencies.
-.IP #define\ ATTR_stagein\ "stagein"
-Alter the list of files to be staged-in before job execution.
-.IP #define\ ATTR_stageout\ "stageout"
-Alter the list of files to be staged-out after job execution.
-.RE
-.LP
-If
-.Ar attrib
-itself is a null pointer, then no attributes are altered.
-.LP
-Associated with an attribute of type ATTR_l (the letter ell)
-is a resource name indicated by
-.Ty resource 
-in the
-.I attrl
-structure.
-All other attribute types should have a pointer to a null string ("") for
-.Ty resource .
-.LP
-If the resource of the specified resource name is already present in the job's
-.At Resource_List
-attribute, it will be altered to the specified value.  If the resource
-is not present in the attribute, it is added.
-.LP
-Certain attributes of a job may or may not be alterable depending on
-the state of the job;  see \fBqalter\fP(1B).
-.sp
-.LP
-The parameter,
-.Ar extend ,
-is reserved for implementation defined extensions.
-.if !\n(Pb .ig Ig
-It is not
-currently used by this function.
-.Ig
-.SH "SEE ALSO"
-qalter(1B), qhold(1B), qrls(1B), qsub(1B), pbs_connect(3B), pbs_holdjob(3B),
-and pbs_rlsjob(3B)
+.fi
+.SH DESCRIPTION
+A character string is returned containing the names of the PBS servers.
+.SH SEE ALSO
+pbs_connect(3B), pbs_default(3B), pbs_fbserver(3B)
 .SH DIAGNOSTICS
-When the batch request generated by the \fBpbs_alterjob\fP() or  \fBpbs_alterjob_async\fP()
-function has been completed successfully by a batch server, the routine will
-return 0 (zero).
-Otherwise, a non zero error is returned.  The error number is also set
-in pbs_errno.
+If the servers cannot be determined, a NULL value is returned.
 \" turn off any extra indent left by the Sh macro
 .RE
