@@ -88,6 +88,9 @@ pbs_sigjob \- send a signal to a pbs batch job
 .nf
 .ft 3
 int pbs_sigjob(\^int\ connect, char\ *job_id, char\ *signal, char\ *extend\^)
+.sp
+int pbs_sigjobasync(\^int\ connect, char\ *job_id, char\ *signal, 
+char\ *extend\^)
 .fi
 .ft 1
 .SH DESCRIPTION
@@ -104,6 +107,8 @@ If the batch job is in the
 state, the batch server will send the job the signal number corresponding
 to the signal named in
 .Ar signal .
+When the asynchronous \fBpbs_sigjobasync\fP() call is used, the server will
+reply before passing the signal request to the pbs_mom.
 .LP
 The argument,
 .Ar job_id ,
@@ -126,7 +131,7 @@ currently used by this function.
 .SH "SEE ALSO"
 qsig(1B) and pbs_connect(3B)
 .SH DIAGNOSTICS
-When the batch request generated by \fBpbs_sigjob\fP()
+When the batch request generated by the \fBpbs_sigjob\fP() or \fBpbs_sigjobasync\fP()
 function has been completed successfully by a batch server, the routine will
 return 0 (zero).
 Otherwise, a non zero error is returned.  The error number is also set
